# Python2_2

./: README.md  pyproject.toml  qss_example1.py  qss_example2.py  qss_example3.py  qss_example4.py  style.qss  task1.py  task2.py  task3.py
