[tool.poetry]
name = "gui-practice"
version = "0.1.0"
description = ""
authors = ["rezvaya <rezvaya2016@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pyside6 = "^6.6.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
